--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <h2>Jarra Eléctrica</h2>
       <p>Jarra eléctrica de 2L, rápida y segura. Ideal para hervir agua.</p>
       <p class="precio">$10.00</p>
-      <a class="boton" href="https://wa.me/50370418755?text=Hola,%20quiero%20el%20Producto%201" target="_blank">Lo quiero por WhatsApp</a>
+      <a class="boton" href="https://wa.me/50370418755?text=Hola,%20quiero%20el%20Jarra Electrica%20" target="_blank">Lo quiero por WhatsApp</a>
     </div>
 
     <div class="producto">
@@ -185,3 +185,4 @@
 
 </body>
 </html>
+
