--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <h2>Jarra con 6 Vasos</h2>
       <p>Jarra con 6 vasos. Práctico y elegante para bebidas frías.</p>
       <p class="precio">$15.00</p>
-      <a class="boton" href="https://wa.me/50370418755?text=Hola,%20quiero%20el%20Producto%202" target="_blank">Lo quiero por WhatsApp</a>
+      <a class="boton" href="https://wa.me/50370418755?text=Hola,%20quiero%20el%20Jarra con 6 vasos%20" target="_blank">Lo quiero por WhatsApp</a>
     </div>
 
   </div>
@@ -185,4 +185,5 @@
 
 </body>
 </html>
+
 
