--- a/index.html
+++ b/index.html
@@ -162,28 +162,28 @@
 
   <script>
     const productos = [
-      {nombre: 'Planchas de ropa', desc: 'De vapor.', precio: '15.00', imagenes: ['IMG/plan1.jpg','IMG/plan2.jpg']},
+      {nombre: 'Planchas de ropa', desc: 'C/U De vapor.', precio: '15.00', imagenes: ['IMG/plan1.jpg','IMG/plan2.jpg']},
       {nombre: 'Jarra Eléctrica', desc: 'Jarra eléctrica de 2L', precio: '15.00', imagenes: ['IMG/jarra1.jpg','IMG/jarra3.jpg']},
-      {nombre: 'Sarten Eléctrico', desc: 'Capacidad de 2.5L', precio: '12.00', imagenes: ['IMG/ser1.jpg','IMG/ser2.jpg']},
+      {nombre: 'Sarten Eléctrico', desc: 'Capacidad de 2.5L', precio: '15.00', imagenes: ['IMG/ser1.jpg','IMG/ser2.jpg']},
       {nombre: 'Pavera', desc: 'Anti-adherente, hornear', precio: '10.00', imagenes: ['IMG/yu1.jpg','IMG/yu2.jpg']},
       {nombre: 'Olla', desc: 'Olla extendida', precio: '10.00', imagenes: ['IMG/o1.jpg','IMG/o2.jpg']},
       {nombre: 'Jarra con 6 Vasos', desc: 'Jarra con vasos, práctica y elegante.', precio: '15.00', imagenes: ['IMG/jarravasos1.jpg','IMG/jarravasos2.jpg','IMG/jarravasos3.jpg']},
       {nombre: 'Set de 3 saleros', desc: 'Perfectos para sal, pimienta y especias.', precio: '5.00', imagenes: ['IMG/Salero1.jpg','IMG/Salero2.jpg']},
-      {nombre: 'Ollas', desc: '2 diferentes tipos.', precio: '16.00', imagenes: ['IMG/olas1.jpg','IMG/olas2.jpg']},
+      {nombre: 'Ollas', desc: '2 diferentes tipos.', precio: '12.00', imagenes: ['IMG/olas1.jpg','IMG/olas2.jpg']},
       {nombre: 'Set de sabanas decorados', desc: 'Incluye 2 fundas almohada, 1 sabana, 1 sobresabana.', precio: '20.00', imagenes: ['IMG/sab1.jpg','IMG/sab2.jpg']},
-      {nombre: 'Juego de platos y vasos', desc: 'Ideales para uso diario.', precio: '12.00', imagenes: ['IMG/vajilla1.jpg','IMG/vajilla2.jpg']},
+      {nombre: 'Juego de platos y vasos', desc: 'Ideal uso diario, mataerial plastico.', precio: '10.00', imagenes: ['IMG/vajilla1.jpg','IMG/vajilla2.jpg']},
       {nombre: 'Recipiente Plástico', desc: 'Práctico para almacenar alimentos.', precio: '5.00', imagenes: ['IMG/re1.jpg','IMG/re2.jpg']},
       {nombre: 'Sartén', desc: 'Tamaño 35cm ideal para freír.', precio: '15.00', imagenes: ['IMG/sarte1.jpg','IMG/sarte2.jpg']},
       {nombre: 'Juego de utencilios', desc: 'Incluye 4 piezas.', precio: '5.00', imagenes: ['IMG/jue.jpg']},
-      {nombre: 'Tazas', desc: 'Porcelana.', precio: '2.00', imagenes: ['IMG/ta1.jpg','IMG/ta3.jpg']},
-      {nombre: 'Set de 3 Ollas', desc: 'Incluyen tapas y asas seguras.', precio: '12.00', imagenes: ['IMG/ollas1.jpg','IMG/ollas2.jpg']},
-      {nombre: 'Sartén Antiadherente', desc: 'Fácil de limpiar con mango ergonómico.', precio: '13.00', imagenes: ['IMG/sar1.jpg','IMG/sar2.jpg']},
+      {nombre: 'Tazón dos asas', desc: 'Porcelana, ideal para bebidas calientes o frias.', precio: '5.00', imagenes: ['IMG/ta1.jpg','IMG/ta3.jpg']},
+      {nombre: 'Set de 3 Ollas', desc: 'Incluyen tapas y asas seguras.', precio: '14.00', imagenes: ['IMG/ollas1.jpg','IMG/ollas2.jpg']},
+      {nombre: 'Sartén Antiadherente', desc: 'Fácil de limpiar con mango ergonómico.', precio: '8.00', imagenes: ['IMG/sar1.jpg','IMG/sar2.jpg']},
       {nombre: 'Recipientes', desc: 'Hechas de ceramica.', precio: '8.00', imagenes: ['IMG/reci1.jpg','IMG/reci2.jpg']},
       {nombre: 'Set de 6 vasos', desc: 'Vasos pequeños de vidrio.', precio: '5.00', imagenes: ['IMG/va1.jpg','IMG/va2.jpg']},
       {nombre: 'Set de 4 vasos', desc: 'Vasos grandes de vidrio.', precio: '5.00', imagenes: ['IMG/vas.jpg']},
       {nombre: 'Sartén Cuadrado', desc: 'Antiadherente, práctico y moderno.', precio: '15.00', imagenes: ['IMG/s1.jpg','IMG/s2.jpg']},
       {nombre: 'Frutera', desc: '5 pcs de vidrio color amarillo.', precio: '3.50', imagenes: ['IMG/fru1.jpg','IMG/fru2.jpg']},
-      {nombre: 'Set 4 platos', desc: 'Pequeños de vidrio.', precio: '3.00', imagenes: ['IMG/p1.jpg','IMG/p2.jpg']},
+      {nombre: 'Set 4 pailas', desc: 'Pequeños de vidrio.', precio: '3.00', imagenes: ['IMG/p1.jpg','IMG/p2.jpg']},
       {nombre: 'Recipiente', desc: 'Porcelana.', precio: '3.00', imagenes: ['IMG/r1.jpg','IMG/r2.jpg']},
       {nombre: 'Juego de cuchillos', desc: 'Incluye 7 diferentes', precio: '7.00', imagenes: ['IMG/cu.jpg','IMG/cu2.jpg']},
       {nombre: 'Set de 2 Azucareras', desc: 'Vidrio. Ideales para azúcar, café u otros.', precio: '4.00', imagenes: ['IMG/azu1.jpg','IMG/azu2.jpg']},
@@ -267,6 +267,7 @@
 
 </body>
 </html>
+
 
 
 
